pulldown-cmark-mdcat/tests/snapshots/render/ansi@commonmark-spec-180-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 123
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/180-html_blocks.md
---
[32m<?php
[0m[32m
[0m[32m  echo '>';
[0m[32m
[0m[32m?>
[0m
okay
